--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
     <groupId>TM-maven-3</groupId>
     <artifactId>TM-maven-3</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
+        </dependency>
 
+    </dependencies>
 </project>
